--- a/TEST_WF/TEST_WF.csproj
+++ b/TEST_WF/TEST_WF.csproj
@@ -76,6 +76,7 @@
     </Compile>
     <EmbeddedResource Include="Views\EquipView.resx">
       <DependentUpon>EquipView.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <None Include="Properties\DataSources\wLib.DB.WB_EQUIP_VO.datasource" />
     <None Include="Properties\Settings.settings">
