--- a/wLib/wLib.csproj
+++ b/wLib/wLib.csproj
@@ -70,7 +70,12 @@
     <Compile Include=".DB\dao\JH\JHGATE_DAO.cs" />
     <Compile Include=".DB\dao\JH\JHSENDMESSAGE_DAO.cs" />
     <Compile Include=".DB\dao\NDMS\NDMS_ADM_DAO.cs" />
-    <Compile Include=".DB\dao\NDMS\NDMS_ALERT_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_ALMORD_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_WAL_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_BOARD_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_OBSV_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_INTRCP_DAO.cs" />
+    <Compile Include=".DB\dao\NDMS\NDMS_THOLD_DAO.cs" />
     <Compile Include=".DB\dao\NDMS\NDMS_DATA_DAO.cs" />
     <Compile Include=".DB\dao\NDMS\NDMS_EQUIP_DAO.cs" />
     <Compile Include=".DB\dao\OP\ORDERRESULTVIEW_DAO.cs" />
@@ -80,8 +85,12 @@
     <Compile Include=".DB\dao\WB\WB_BRDSTATUS_DTMF_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_DISPLAY_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_ISUALERTGROUP_DAO.cs" />
+    <Compile Include=".DB\dao\WB\WB_ISULIST_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_ISUALERT_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_ISSUESTATUS_DAO.cs" />
+    <Compile Include=".DB\dao\WB\WB_PARKCARNOW_DAO.cs" />
+    <Compile Include=".DB\dao\WB\WB_PARKSMSLIST_DAO.cs" />
+    <Compile Include=".DB\dao\WB\WB_PARKSMSMENT_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_SMSUSER_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_ISUMENT_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_DISSTATUS_DAO.cs" />
@@ -116,7 +125,6 @@
     <Compile Include=".DB\dao\WB\WB_RECVMESSAGE_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_SENDMESSAGE_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_DATA_TILT_DAO.cs" />
-    <Compile Include=".DB\dto\AREA_LIST_VO.cs" />
     <Compile Include=".DB\dto\JHDATA_DTO.cs" />
     <Compile Include=".DB\dto\WB_DATA_SAVER.cs" />
     <Compile Include=".DB\exclass\CUBRID_T.cs" />
@@ -130,6 +138,12 @@
     <Compile Include=".DB\vo\JH\JHGATESTATUS_VO.cs" />
     <Compile Include=".DB\vo\JH\JHGATE_VO.cs" />
     <Compile Include=".DB\vo\JH\JHSENDMESSAGE_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_ALMORD_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_WAL_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_BOARD_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_OBSV_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_INTRCP_VO.cs" />
+    <Compile Include=".DB\vo\NDMS\NDMS_THOLD_VO.cs" />
     <Compile Include=".DB\vo\NDMS\NDMS_DATA_VO.cs" />
     <Compile Include=".DB\vo\NDMS\NDMS_EQUIP_VO.cs" />
     <Compile Include=".DB\vo\NMS_EQUIP_VO.cs" />
@@ -143,6 +157,9 @@
     <Compile Include=".DB\vo\WB\WB_ISULIST_VO.cs" />
     <Compile Include=".DB\vo\WB\WB_ISUALERT_VO.cs" />
     <Compile Include=".DB\vo\WB\WB_ISSUESTATUS_VO.cs" />
+    <Compile Include=".DB\vo\WB\WB_PARKCARNOW_VO.cs" />
+    <Compile Include=".DB\vo\WB\WB_PARKSMSLIST_VO.cs" />
+    <Compile Include=".DB\vo\WB\WB_PARKSMSMENT_VO.cs" />
     <Compile Include=".DB\vo\WB\WB_SMSUSER_VO.cs" />
     <Compile Include=".DB\vo\WB\WB_ISUMENT_VO.cs" />
     <Compile Include=".DB\vo\WB\WB_DISPLAY_VO.cs" />
@@ -198,6 +215,7 @@
     <Compile Include="conf\DATA_EXT_CONF.cs" />
     <Compile Include="conf\DB_CONF.cs" />
     <Compile Include="conf\DPS_CONF.cs" />
+    <Compile Include="conf\HTI_CONF.cs" />
     <Compile Include="conf\LOG_CONF.cs" />
     <Compile Include=".DB\dao\WB\WB_DATA_DPLACE_DAO.cs" />
     <Compile Include=".DB\dao\WB\WB_EQUIP_DAO.cs" />
@@ -208,6 +226,7 @@
     <Compile Include="conf\RUN_CONF.cs" />
     <Compile Include="conf\.XXX_CONF.cs" />
     <Compile Include="conf\STR_CONF.cs" />
+    <Compile Include="conf\CRI_CONF.cs" />
     <Compile Include="conf\TABLE_CONF.cs" />
     <Compile Include="conf\NDMS_TABLE_CONF.cs" />
     <Compile Include="conf\TX700_CONF.cs" />
@@ -230,6 +249,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="UI\AREA_CODE_T.cs" />
     <Compile Include="UI\BottomPanel.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -301,6 +321,7 @@
   <ItemGroup>
     <EmbeddedResource Include="dbPanel.resx">
       <DependentUpon>dbPanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -308,9 +329,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\BottomPanel.resx">
       <DependentUpon>BottomPanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\DatabasePage.resx">
       <DependentUpon>DatabasePage.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\HelpPage.resx">
       <DependentUpon>HelpPage.cs</DependentUpon>
@@ -332,6 +355,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UI\AgentPanel.resx">
       <DependentUpon>AgentPanel.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
